overflow fixed, sockets close button fix

--- a/public/stylesheets/base.css
+++ b/public/stylesheets/base.css
@@ -7,7 +7,7 @@ body {
 	font-family: 'Ubuntu-L', Arial;
 	margin: 0;
 	padding: 0;
-	overflow: hidden; /* not to allow the window to scroll */
+/*	overflow: hidden;  not to allow the window to scroll */
 }
 
 .top-navbar {
